--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <tbody></tbody>
     </table>
 
-    <script src="src/library.js" type="module"></script>
+    <script src="src/library.js"></script>
     <script>
       document
         .getElementById("addNewButton")
